--- a/LMS_WEB/WebContent/include.html
+++ b/LMS_WEB/WebContent/include.html
@@ -47,16 +47,10 @@
         <div id="navbar" class="navbar-collapse collapse in" aria-expanded="true">
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.jsp">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">User Categories<span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="admin.jsp">Administrator</a></li>
-                <li><a href="librarian.html">Librarian</a></li>
-                <li><a href="borrower.html">Borrower</a></li>
-              </ul>
-            </li>
+            <li><a href="admin.jsp">Administrator</a></li>
+            <li><a href="librarian.jsp">Librarian</a></li>
+            <li><a href="borrower.jsp">Borrower</a></li>
+            
           </ul>
         </div><!--/.nav-collapse -->
       </div>
